[tool.poetry]
name = "pycctl"
version = "0.1.0"
authors = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Python cctl helper utility."
keywords = ["Casper Network", "Blockchain", "Python"]
license = "Apache-2.0"
maintainers = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
homepage = "https://github.com/casper-network/cctl-py"
readme = "README.md"
repository = "https://github.com/casper-network/cctl-py"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
